--- a/index.html
+++ b/index.html
@@ -49,6 +49,78 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="open-menu-button">
+          <svg width="24" height="24" class="open-menu-icon">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <!-- MOBILE MENU -->
+      <div class="mobile-menu">
+        <button type="button" class="menu-close-button">
+          <svg width="8" height="8" class="menu-btn-svg">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav>
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-item">
+              <a href="./index.html" class="mobile-menu-link">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="mob-menu-link">
+          <address>
+            <ul class="mobile-address-list">
+              <li class="mobile-address-item">
+                <a href="mailto:info@devstudio.com" class="mobile-address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-address-item">
+                <a href="tel:+110001111111" class="mobile-address-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-icons-list">
+            <li class="mobile-icons-item">
+              <a class="mobile-icon-elipse" href="">
+                <svg class="mobile-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-icons-item">
+              <a class="mobile-icon-elipse" href="">
+                <svg class="mobile-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-icons-item">
+              <a class="mobile-icon-elipse" href="">
+                <svg class="mobile-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-icons-item">
+              <a class="mobile-icon-elipse" href="">
+                <svg class="mobile-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
