--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </button>
       </div>
       <!-- MOBILE MENU -->
-      <div class="mobile-menu is-open">
+      <div class="mobile-menu">
         <button type="button" class="menu-close-button">
           <svg width="8" height="8" class="menu-btn-svg">
             <use href="./images/icons.svg#icon-close"></use>
@@ -193,18 +193,13 @@
           <h2 class="team-container-title">Our Team</h2>
           <ul class="team-card-list">
             <li class="team-card">
-              <picture>
-                <source
-                  media="(min-width: 320px)"
-                  srcset="./images/team-1@2x.jpg"
-                />
-                <img
-                  src="./images/img-1.jpg"
-                  alt="Team member Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-              </picture>
+              <img
+                srcset="./images/img-1.jpg 1x, ./images/team-1@2x.jpg 2x"
+                src="./images/img-1.jpg"
+                alt="Team member Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-member-info">
                 <h3 class="team-cards-title">Mark Guerrero</h3>
                 <p class="team-cards-content">Product Designer</p>
@@ -241,18 +236,13 @@
               </div>
             </li>
             <li class="team-card">
-              <picture>
-                <source
-                  media="(min-width: 320px)"
-                  srcset="./images/team-2@2x.jpg"
-                />
-                <img
-                  src="./images/img-2.jpg"
-                  alt="Team member Tom Ford"
-                  width="264"
-                  height="260"
-                />
-              </picture>
+              <img
+                srcset="./images/img-2.jpg 1x, ./images/team-2@2x.jpg 2x"
+                src="./images/img-2.jpg"
+                alt="Team member Tom Ford"
+                width="264"
+                height="260"
+              />
               <div class="team-member-info">
                 <h3 class="team-cards-title">Tom Ford</h3>
                 <p class="team-cards-content">Frontend Developer</p>
@@ -289,18 +279,13 @@
               </div>
             </li>
             <li class="team-card">
-              <picture>
-                <source
-                  media="(min-width: 320px)"
-                  srcset="./images/team-3@2x.jpg"
-                />
-                <img
-                  src="./images/img-3.jpg"
-                  alt="Team member Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-              </picture>
+              <img
+                srcset="./images/img-3.jpg 1x, ./images/team-3@2x.jpg 2x"
+                src="./images/img-3.jpg"
+                alt="Team member Camila Garcia"
+                width="264"
+                height="260"
+              />
               <div class="team-member-info">
                 <h3 class="team-cards-title">Camila Garcia</h3>
                 <p class="team-cards-content">Marketing</p>
@@ -337,18 +322,13 @@
               </div>
             </li>
             <li class="team-card">
-              <picture>
-                <source
-                  media="(min-width: 320px)"
-                  srcset="./images/team-4@2x.jpg"
-                />
-                <img
-                  src="./images/img-4.jpg"
-                  alt="Team member Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-              </picture>
+              <img
+                srcset="./images/img-4.jpg 1x, ./images/team-4@2x.jpg 2x"
+                src="./images/img-4.jpg"
+                alt="Team member Daniel Wilson"
+                width="264"
+                height="260"
+              />
               <div class="team-member-info">
                 <h3 class="team-cards-title">Daniel Wilson</h3>
                 <p class="team-cards-content">UI Designer</p>
@@ -714,7 +694,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-button">
           <svg width="8" height="8" class="close-btn-svg">
